tests/negative/semantic/missing_return/input.ci
int f() {
    int x = 1;
}
void main() {}
